--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -78,6 +78,32 @@
   transition: all 0.5s ease;
   isolation: isolate;
 
+.pModelContent.light{
+  .list{ 
+
+    h4 {
+      background: transparent;
+      color: rgb(0, 0, 0);
+      z-index: 1;
+    }
+    h5 {
+      background: transparent;
+      color: rgb(0, 0, 0);
+      z-index: 1;
+    }
+  .listItem .imgWrap,.listItem .imgWrap2 {
+    position: relative;
+    border-radius: 50%;
+    // outline: 2px solid rgb(255, 255, 255);
+    // background-color: rgb(255, 255, 255);
+    transition: all 0.5s ease;
+
+    img{
+        width: 300px;
+    }
+}
+  }
+}
   
   &::before {
     content: "";
