site fully translated

--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -280,6 +280,7 @@ aside p {
   border-radius: 20px;
   -o-object-fit: scale-down;
      object-fit: scale-down;
+  pointer-events: none;
 }
 .blog .metaInfo {
   display: inline-flex;
