--- a/src/Style/footer.scss
+++ b/src/Style/footer.scss
@@ -99,6 +99,7 @@
     font-family: 'Neue', Inter, system-ui, Avenir;
     font-size: 14px;
     text-decoration: none;
+    text-transform: capitalize;
 }
 
 .footer-link:hover {
