--- a/src/Style/footer.css
+++ b/src/Style/footer.css
@@ -97,6 +97,7 @@
   font-family: "Neue", Inter, system-ui, Avenir;
   font-size: 14px;
   text-decoration: none;
+  text-transform: capitalize;
 }
 
 .footer-link:hover {
