--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -69,11 +69,11 @@
     position: fixed;
     top: 0;
     right: -100%;
-    background-color: hsla(0, 0%, 0%, 0.8);
+    background-color: hsla(0, 0%, 91%, 0.85);
     backdrop-filter: blur(16px);
     -webkit-backdrop-filter: blur(16px);
     width: 70%;
-    height: 100%;
+    height: 100vh;
     padding: 6rem 3rem 0;
     transition: right 0.6s ease;
     box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.3803921569);
@@ -81,7 +81,7 @@
 }
 @media screen and (max-width: 770px) {
   .nav__menu {
-    padding: 7rem 1rem 2rem;
+    padding: 7rem 2rem 2rem;
   }
   .nav__list {
     row-gap: 1rem;
