--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -80,11 +80,11 @@
         position: fixed;
         top: 0;
         right: -100%;
-        background-color: hsla(0, 0%, 0%, 0.8);
+        background-color: hsla(0, 0%, 91%, 0.85);
         backdrop-filter: blur(16px);
         -webkit-backdrop-filter: blur(16px);
         width: 70%;
-        height: 100%;
+        height: 100vh;
         padding: 6rem 3rem 0;
         transition: right 0.6s ease;
         box-shadow: -2px 0px 10px #00000061;
@@ -93,7 +93,7 @@
 
 @media screen and (max-width: 770px) {
     .nav__menu {
-        padding: 7rem 1rem 2rem;
+        padding: 7rem 2rem 2rem;
     }
 
     .nav__list {
