--- a/src/index.css
+++ b/src/index.css
@@ -42,17 +42,18 @@
   font-family: "MonumentRegular", 'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-html {
+/* html {
   scroll-snap-type: y proximity;
   scroll-behavior: smooth;
-}
+} */
 
 #root {
   position: relative;
   color: var(--text-dark);
-    background-color: var(--bg-color);
+  background-color: var(--bg-color);
 }
-#root section:nth-of-type(1){
+
+#root section:nth-of-type(1) {
   padding-top: 15vh;
 }
 
@@ -98,10 +99,11 @@ h4 {
   text-transform: uppercase;
 }
 
-h5{
+h5 {
   font-size: 1.1em;
 }
-h6{
+
+h6 {
   font-size: 1em;
 }
 
@@ -122,7 +124,7 @@ ul li {
     h2              { font-size: 2.58445946rem; }
 } */
 
-img{
+img {
   -khtml-user-select: none;
   -o-user-select: none;
   -moz-user-select: none;
@@ -149,6 +151,27 @@ img{
 ::-webkit-scrollbar-track {
   background: inherit;
 }
+
+html.lenis {
+  height: auto
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none
+}
+
 /* 
 @media (prefers-color-scheme: light) {
   :root {
@@ -197,18 +220,19 @@ img{
   html {
     scroll-snap-type: none;
   }
+
   h1 {
     font-size: clamp(2.25rem, 10vw, 5.55rem);
   }
-  
+
   h2 {
     font-size: clamp(2rem, 10vw, 4.5rem);
   }
-  
+
   h3 {
     font-size: clamp(2rem, 10vw, 3.6rem);
   }
-  
+
   /* section{
     min-height: unset;
   } */
