--- a/src/Style/who.css
+++ b/src/Style/who.css
@@ -4,6 +4,7 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
+    margin-bottom: 15vh;
 }
 
 .whoImg {
@@ -11,6 +12,7 @@
     display: grid;
     justify-items: end;
     justify-content: end;
+    will-change: contents;
 }
 
 .who h1 {
@@ -48,11 +50,36 @@
 }
 
 .value {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: space-evenly;
+    padding-block: 20vh;
+  isolation: isolate;
+  color: white;
 }
+.value::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    background: url(/bg.webp);
+    background-size: cover;
+    z-index: -2;
+  }
+  .value::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0;
+    /* background-color: rgba(0, 0, 0, 0.9098039216); */
+    background-color: var(--bg-variable);
+    transition: all 0.5s ease;
+    z-index: -1;
+  }
 
 .value h3 {
     text-transform: uppercase;
@@ -60,6 +87,7 @@
 
 .value>h1 {
     align-self: center;
+    margin-block: 5vh;
 }
 
 .value img {
@@ -80,6 +108,7 @@
     align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     justify-items: center;
+    gap: 5vh;
 }
 
 .value li.care img {
@@ -95,9 +124,6 @@
     justify-self: flex-end;
 }
 
-.value h3 {}
-
-.value h3 {}
 
 .collab {
     display: flex;
@@ -119,6 +145,7 @@
 
 .collab h1 {
     text-align: center;
+    line-break: anywhere;
 }
 
 .collabInfo {
@@ -135,4 +162,81 @@
     justify-content: space-around;
     max-width: 500px;
     min-height: 60vh;
+}
+
+.surpass{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5vh;
+}
+
+.surpass img {
+    max-width: 100%;
+    border-radius: 20px;
+    max-height: 500px;
+}
+.surpass p {
+    max-width: 500px;
+    text-align: center;
+}
+
+
+@media (max-width: 770px) {
+    .value{
+        padding-block: 10vh;
+        text-align: center;
+    }
+    .value p {
+        justify-self: center;
+    }
+    .value li.care img {
+        order: 1;
+    }
+    .who img {
+       
+        height: unset;
+    }
+    .whoImg {
+        justify-items: center;
+        justify-content: center;
+        will-change: contents;
+        gap: 2vh;
+        align-items: center;
+        text-align: center;
+    }
+    .who h5 {
+        position: relative;
+        bottom: 0;
+        left: 0;
+        max-width: unset;
+        font-size: 13px;
+    }
+    .who p {
+        position: relative;
+        bottom: 0;
+        right: 0;
+        float: none;
+    }
+    
+    .value li.care>div {
+        justify-self: center;
+    }
+    .who{
+        min-height: unset;
+    }
+
+    .collab{
+        min-height: unset;
+        padding-block: 10vh;
+        text-align: center;
+    }
+
+    .surpass{
+        min-height: unset;
+        padding-block: 10vh;
+        text-align: center;
+    }
 }
