--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -82,6 +82,7 @@
   min-height: 400px;
   color: var(--text-dark);
   padding-block: 20px;
+  scroll-margin-top: 40vh;
 
   & input,
   & textarea {
