--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -467,6 +467,38 @@ aside p {
   }
 }
 
+.table-container {
+  margin: 20px;
+}
+
+
+// table
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+
 @media (max-width: 770px) {
   .list {
     flex-direction: column;
