--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -190,7 +190,7 @@
 
   .table {
     width: 100%;
-    min-height: 90vh;
+    // min-height: 90vh;
     background-color: white;
     border-radius: 15px;
   }
