--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -361,27 +361,42 @@ aside p {
 
 table {
   width: 100%;
+  height: 80vh;
   border-collapse: collapse;
+}
+
+table * {
+  font-family: "Neue", Inter, system-ui, Avenir;
+  font-size: 12px;
+}
+
+thead, tbody {
+  font-synthesis-weight: auto;
+}
+
+td:first-child, th:first-child {
+  text-align: left;
 }
 
 th,
 td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+  padding: 12px;
+  text-align: center;
+  border-bottom: 1px solid #7c7c7c;
 }
 
-th {
-  background-color: #f2f2f2;
+td {
+  color: gray;
   font-weight: bold;
 }
 
-tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
+tr:last-child td {
+  border-bottom: 1px solid rgba(221, 221, 221, 0);
 }
 
-tbody tr:hover {
-  background-color: #f5f5f5;
+th {
+  padding-block: 2em;
+  font-weight: bold;
 }
 
 @media (max-width: 770px) {
@@ -450,5 +465,12 @@ tbody tr:hover {
   }
   .flexy p {
     width: 100%;
+  }
+  .table-container {
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
   }
 }/*# sourceMappingURL=Component.css.map */
