--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -22,8 +22,8 @@
 .over-scroll p::before {
   content: "";
   position: absolute;
-  bottom: -45px;
-  height: 100px;
+  bottom: -150px;
+  height: 200px;
   width: 15px;
   border-right: 1px solid;
 }
@@ -56,7 +56,7 @@ aside p {
 }
 
 .base-input {
-  transition: border-color 0.5s;
+  transition: border-color 0.5s, all 0.5s ease;
   outline: none;
   position: relative;
 }
@@ -70,7 +70,7 @@ aside p {
   width: 100%;
   height: 100%;
   border: 2px solid var(--accent);
-  border-radius: inherit;
+  border-radius: 17px;
   background-color: transparent;
   opacity: 0;
   transition: opacity 0.5s;
@@ -370,11 +370,13 @@ table * {
   font-size: 12px;
 }
 
-thead, tbody {
+thead,
+tbody {
   font-synthesis-weight: auto;
 }
 
-td:first-child, th:first-child {
+td:first-child,
+th:first-child {
   text-align: left;
 }
 
