--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -23,8 +23,8 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -45px;
-      height: 100px;
+      bottom: -150px;
+      height: 200px;
       width: 15px;
       border-right: 1px solid;
     }
@@ -59,7 +59,7 @@ aside p {
 }
 
 .base-input {
-  transition: border-color 0.5s;
+  transition: border-color 0.5s , all 0.5s ease;
   outline: none;
   position: relative;
 }
@@ -72,7 +72,7 @@ aside p {
   width: 100%;
   height: 100%;
   border: 2px solid var(--accent);
-  border-radius: inherit;
+  border-radius: 17px;
   background-color: transparent;
   // padding: 0.875rem;
   opacity: 0;
@@ -285,7 +285,7 @@ aside p {
     padding: 1em;
     background: radial-gradient(#a5185366, transparent);
 
-    img{
+    img {
       width: 200px;
     }
     h5 {
@@ -403,7 +403,7 @@ aside p {
   }
 }
 
-.legalHead{
+.legalHead {
   z-index: 1;
   position: relative;
   display: flex;
@@ -442,13 +442,13 @@ aside p {
     z-index: -1;
   }
 
-  p{
+  p {
     width: 60%;
     line-height: 1.25;
     white-space-collapse: preserve-breaks;
   }
 }
-.flexy{
+.flexy {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -457,10 +457,10 @@ aside p {
   margin-block: 5vh;
   scroll-snap-align: none !important;
 
-  h3{
+  h3 {
     text-transform: uppercase;
   }
-  p{
+  p {
     // width: 80%;
     line-height: 1.25;
     white-space-collapse: preserve-breaks;
@@ -471,21 +471,22 @@ aside p {
   margin: 20px;
 }
 
-
 // table
 table {
   width: 100%;
   height: 80vh;
   border-collapse: collapse;
 }
-table *{
-  font-family: 'Neue', Inter, system-ui, Avenir;
+table * {
+  font-family: "Neue", Inter, system-ui, Avenir;
   font-size: 12px;
 }
-thead,tbody{
+thead,
+tbody {
   font-synthesis-weight: auto;
 }
-td:first-child,th:first-child{
+td:first-child,
+th:first-child {
   text-align: left;
 }
 th,
@@ -498,7 +499,7 @@ td {
   color: gray;
   font-weight: bold;
 }
-tr:last-child td{
+tr:last-child td {
   border-bottom: 1px solid #dddddd00;
 }
 th {
@@ -514,7 +515,6 @@ th {
 // tbody tr:hover {
 //   background-color: #f5f5f5;
 // }
-
 
 @media (max-width: 770px) {
   .list {
@@ -571,21 +571,21 @@ th {
       }
     }
   }
-  .legalHead{
+  .legalHead {
     padding-inline: 5vw;
-  h1{
-    font-size: clamp(1.4rem, 5vw, 5.55rem);
-  }
-    p{
+    h1 {
+      font-size: clamp(1.4rem, 5vw, 5.55rem);
+    }
+    p {
       width: 100%;
     }
   }
-  .flexy{
+  .flexy {
     padding-inline: 5vw;
     h3 {
       font-size: clamp(1.4rem, 5vw, 3.6rem);
-  }
-    p{
+    }
+    p {
       width: 100%;
     }
   }
