--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -49,12 +49,13 @@
 // }
 
 .nav__cta {
+    height: 42px;
     position: relative;
     display: inline-flex;
     align-items: center;
     gap: 10px;
     background-color: transparent;
-    color: var(--accent);
+    color: var(--accent) !important;
     border: 2px solid var(--accent);
     border-radius: 25px;
     cursor: pointer;
@@ -62,7 +63,7 @@
     padding: 0.35rem 1rem;
 
     &:hover {
-        box-shadow: 0px 0px 10px 1px var(--accent);
+        box-shadow: 0px 0px 10px -3px var(--accent);
     }
 
     .arrow {
@@ -102,7 +103,7 @@
 
     .nav__link,
     .nav__cta {
-        font-size: 12px;
+        font-size: 13px;
     }
 
     .nav__cta {
@@ -137,7 +138,7 @@
 
 .nav__link {
     color: rgb(0, 0, 0);
-    font-size: 13px;
+    font-size: 14px;
     text-transform: uppercase;
     transition: all 0.4s ease;
 
