--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -1,29 +1,13 @@
+.wrapper{
+  position: relative;
+  // z-index: 1;
+}
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   padding-inline: 10vw;
   position: relative;
-
-  &::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    inset: 0;
-    background: url(/bg.webp);
-    background-size: cover;
-    z-index: -2;
-  }
-  &::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.9098039216);
-    z-index: -1;
-  }
 
   & > img {
     width: 500px;
@@ -39,8 +23,8 @@
   top: 10%;
   left: 50%;
   object-fit: cover;
-  border-radius: 30px;
-  filter: grayscale(1) brightness(0.25);
+  border-radius: 40px;
+  filter: grayscale(0.9) brightness(0.5);
   transition: all 0.3s ease-out;
   transform: translate(-50%, 0);
   z-index: 0;
@@ -55,6 +39,9 @@
 
   h3 {
     color: var(--text-color);
+  }
+  .primary-btn {
+    padding: 1.25em;
   }
 }
 
@@ -78,6 +65,7 @@
 }
 
 .textline {
+  background-image: linear-gradient(0deg, #ffffffd9 0%, #efefef 19%, #efefef 86%, #ffffffd9 100%);
   h2 {
     float: right;
     text-transform: uppercase;
@@ -133,14 +121,14 @@
     width: 60%;
     color: white;
     margin: auto;
-    padding: 1em;
+    padding-block: 1em;
     text-transform: uppercase;
     z-index: 1;
   }
   .redOverlay {
     position: absolute;
     inset: 0;
-    width: 100%;
+    width: 97%;
     height: 100%;
     background-color: rgb(159 1 66 / 70%);
     mix-blend-mode: hard-light;
@@ -195,7 +183,7 @@
       gap: 30px;
       float: right;
       button {
-        width: 250px;
+        // width: 250px;
       }
     }
   }
