tweaks and fixes set 2

--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -1,5 +1,11 @@
-.over-cont {
+aside {
+  width: 100%;
+  height: 100vh;
   position: absolute;
+}
+
+.over-cont {
+  position: fixed;
   right: 0;
   top: 200px;
   writing-mode: vertical-lr;
@@ -8,16 +14,19 @@
 }
 
 .over-scroll {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 80vh;
   writing-mode: vertical-lr;
   padding-block: 20px;
   z-index: 10;
 }
+.over-scroll a {
+  color: unset;
+}
 .over-scroll p {
   letter-spacing: 7px;
-  font-size: 7px;
+  font-size: 8px;
 }
 .over-scroll p::before {
   content: "";
@@ -31,6 +40,11 @@
 aside span {
   mix-blend-mode: difference;
   filter: grayscale(1) invert(1);
+}
+
+aside a {
+  font-weight: revert;
+  color: revert;
 }
 
 aside p {
@@ -50,6 +64,41 @@ aside p {
   opacity: 1;
 }
 
+@supports (animation-timeline: view()) {
+  @keyframes fade-out-left {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+      transform: translateX(-30vw);
+    }
+  }
+  @keyframes fade-out-right {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+      transform: translateX(30vw);
+    }
+  }
+  @keyframes shadow-in {
+    to {
+      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    }
+  }
+  .over-scroll {
+    animation: fade-out-left auto ease-in both;
+    animation-timeline: scroll();
+    animation-range: 0% 2%;
+  }
+  .over-cont {
+    animation: fade-out-right auto ease-in both;
+    animation-timeline: scroll();
+    animation-range: 0% 2%;
+  }
+}
 .primary-btn {
   padding: 10px 20px;
   margin-block: 2.5vh;
@@ -120,11 +169,12 @@ aside p {
 .arrow:hover {
   box-shadow: 0px 0px 5px #a61853;
   rotate: 0deg;
+  cursor: pointer;
 }
 
 .paragraph {
   display: flex;
-  font-size: 80px;
+  font-size: clamp(2rem, 10vw, 6.25rem);
   line-height: 1;
   padding: 40px;
   max-width: 1280px;
@@ -402,6 +452,12 @@ th {
 }
 
 @media (max-width: 770px) {
+  .over-scroll {
+    padding-block: 12px;
+  }
+  .over-cont {
+    padding-block: 12px;
+  }
   .list {
     flex-direction: column;
     gap: 20px;
@@ -422,7 +478,7 @@ th {
     z-index: -1;
   }
   .paragraph {
-    font-size: clamp(1.5em, 2vh, 2.5em);
+    padding: 15px;
   }
   .blog {
     z-index: 4;
