--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -54,6 +54,10 @@
   inset: 0;
   padding: 0;
   z-index: 0;
+  pointer-events: none !important;
+}
+#canvasWrapper > * {
+  pointer-events: none !important;
 }
 
 .vid {
@@ -71,6 +75,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  translate: 0 -20vh;
   line-height: 1;
   flex-wrap: wrap;
   filter: invert(1);
@@ -208,7 +213,7 @@
     bottom: -150px;
   }
   .hero h1 {
-    font-size: clamp(2.15rem, 10vw, 5.55rem);
+    font-size: clamp(2rem, 10vw, 5.55rem);
   }
   .hero h3 {
     font-size: clamp(2rem, 10vw, 3.6rem);
