--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -53,11 +53,11 @@
   inset: 0;
   padding: 0;
   z-index: 0;
-  // pointer-events: none;
+  pointer-events: none !important;
 
-  // & > div {
-  //   // pointer-events: none !important;
-  // }
+  & > * {
+    pointer-events: none !important;
+  }
 }
 
 .vid {
@@ -75,6 +75,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    translate: 0 -20vh;
     line-height: 1;
     flex-wrap: wrap;
     filter: invert(1);
@@ -230,7 +231,7 @@
     }
   
   h1 {
-      font-size: clamp(2.15rem, 10vw, 5.55rem);
+      font-size: clamp(2rem, 10vw, 5.55rem);
   }
   h3 {
     font-size: clamp(2rem, 10vw, 3.6rem);
