tweak and fixes set 3

--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -288,6 +288,7 @@ aside p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  min-height: unset;
   z-index: 3;
   position: relative;
   color: black;
