--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -24,7 +24,7 @@ aside {
   a {
     color: unset;
   }
-  
+
   p {
     letter-spacing: 7px;
     font-size: 8px;
@@ -394,6 +394,7 @@ aside p {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  min-height: unset;
   z-index: 3;
   position: relative;
   color: black;
