--- a/src/Style/footer.css
+++ b/src/Style/footer.css
@@ -170,6 +170,10 @@
     height: -moz-fit-content;
     height: fit-content;
   }
+  .toTop {
+    top: 70%;
+    right: 15%;
+  }
   .rowMain {
     flex-direction: column;
     gap: 30px;
