--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -118,14 +118,14 @@
   width: 60%;
   color: white;
   margin: auto;
-  padding-block: 1em;
+  padding: 1em;
   text-transform: uppercase;
   z-index: 1;
 }
 .redText .redOverlay {
   position: absolute;
   inset: 0;
-  width: 97%;
+  width: 100%;
   height: 100%;
   background-color: rgba(159, 1, 66, 0.7);
   mix-blend-mode: hard-light;
@@ -223,7 +223,7 @@
     padding: 0;
   }
   .redText .text h3 {
-    font-size: clamp(1.1em, 2vh, 2.5em);
+    font-size: clamp(1.3rem, 5vw, 3.5rem);
   }
   .videoSec {
     min-height: unset;
