--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -122,14 +122,14 @@
     width: 60%;
     color: white;
     margin: auto;
-    padding-block: 1em;
+    padding: 1em;
     text-transform: uppercase;
     z-index: 1;
   }
   .redOverlay {
     position: absolute;
     inset: 0;
-    width: 97%;
+    width: 100%;
     height: 100%;
     background-color: rgb(159 1 66 / 70%);
     mix-blend-mode: hard-light;
@@ -244,7 +244,7 @@
       padding: 0;
 
       h3 {
-        font-size: Clamp(1.1em,2vh,2.5em);
+        font-size: Clamp(1.3rem,5vw,3.5rem);
       }
     }
   }
