--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -216,11 +216,11 @@ aside p {
 }
 .list span {
   position: absolute;
-  top: -400px;
+  top: -350px;
   left: 50%;
   translate: -50%;
   rotate: -90deg;
-  transform: scale(1.3);
+  transform: scale(1.5);
   z-index: -1;
 }
 .list .listItem2 {
@@ -235,7 +235,7 @@ aside p {
   background: radial-gradient(rgba(165, 24, 83, 0.4), transparent);
 }
 .list .listItem2 img {
-  width: 200px;
+  width: 300px;
 }
 .list .listItem2 h5 {
   background: transparent !important;
@@ -245,9 +245,12 @@ aside p {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 250px;
+  gap: 30px;
   color: black;
   text-transform: uppercase;
+}
+.list .listItem h5 {
+  font-size: 1.3em;
 }
 .list .listItem:hover .imgWrap {
   outline: 2px solid var(--accent);
@@ -270,14 +273,14 @@ aside p {
 }
 .list .listItem .imgWrap .button {
   position: absolute;
-  top: 35%;
+  top: 40%;
   left: 50%;
   translate: -50%;
   scale: 0;
   transition: all 0.5s ease;
 }
 .list .listItem img {
-  width: 200px;
+  width: 300px;
   -o-object-fit: scale-down;
   object-fit: scale-down;
   aspect-ratio: 1/1;
@@ -464,6 +467,9 @@ th {
     gap: 20px;
     margin-block: 5em;
     overflow-x: visible;
+  }
+  .list .listItem img, .list .listItem2 img {
+    width: 200px;
   }
   .list h5 {
     background: white;
