--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -309,11 +309,11 @@ aside p {
 
   span {
     position: absolute;
-    top: -400px;
+    top: -350px;
     left: 50%;
     translate: -50%;
     rotate: -90deg;
-    transform: scale(1.3);
+    transform: scale(1.5);
     z-index: -1;
   }
   // .listItem:hover .imgWrap {
@@ -336,7 +336,7 @@ aside p {
     background: radial-gradient(#a5185366, transparent);
 
     img {
-      width: 200px;
+      width: 300px;
     }
     h5 {
       background: transparent !important;
@@ -347,10 +347,13 @@ aside p {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 250px;
+    // height: 250px;
+    gap: 30px;
     color: black;
     text-transform: uppercase;
-
+    h5 {
+      font-size: 1.3em;
+  }
     &:hover .imgWrap {
       outline: 2px solid var(--accent);
       box-shadow: 0px 0px 10px #a61853;
@@ -373,7 +376,7 @@ aside p {
 
       .button {
         position: absolute;
-        top: 35%;
+        top: 40%;
         left: 50%;
         translate: -50%;
         scale: 0;
@@ -381,7 +384,7 @@ aside p {
       }
     }
     img {
-      width: 200px;
+      width: 300px;
       -o-object-fit: scale-down;
       object-fit: scale-down;
       aspect-ratio: 1 / 1;
@@ -579,7 +582,9 @@ th {
     gap: 20px;
     margin-block: 5em;
     overflow-x: visible;
-
+    .listItem img,.listItem2 img{
+width: 200px;
+    }
     h5 {
       background: white;
       z-index: 1;
