--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper {
   position: relative;
   // z-index: 1;
 }
@@ -65,7 +65,13 @@
 }
 
 .textline {
-  background-image: linear-gradient(0deg, #ffffffd9 0%, #efefef 19%, #efefef 86%, #ffffffd9 100%);
+  background-image: linear-gradient(
+    0deg,
+    #ffffffd9 0%,
+    #efefef 19%,
+    #efefef 86%,
+    #ffffffd9 100%
+  );
   h2 {
     float: right;
     text-transform: uppercase;
@@ -229,13 +235,13 @@
       position: absolute;
       bottom: -150px;
     }
-  
-  h1 {
+
+    h1 {
       font-size: clamp(2rem, 10vw, 5.55rem);
-  }
-  h3 {
-    font-size: clamp(2rem, 10vw, 3.6rem);
-}
+    }
+    h3 {
+      font-size: clamp(2rem, 10vw, 3.6rem);
+    }
   }
 
   .redText {
@@ -244,7 +250,7 @@
       padding: 0;
 
       h3 {
-        font-size: Clamp(1.3rem,5vw,3.5rem);
+        font-size: Clamp(1.3rem, 5vw, 3.5rem);
       }
     }
   }
@@ -257,7 +263,7 @@
     }
   }
   .product {
-z-index: 3;
+    z-index: 3;
     .prodHead {
       display: flex;
       flex-direction: column;
@@ -265,12 +271,12 @@ z-index: 3;
         order: 2;
       }
     }
-    
+
     .list {
       flex-direction: column;
       gap: 20px;
       margin-block: 5em;
-  
+
       h5 {
         background: white;
         z-index: 1;
@@ -286,8 +292,136 @@ z-index: 3;
       }
     }
   }
-  .LogoDisp{
+  .LogoDisp {
     min-height: unset;
     padding-top: 20vh;
+  }
+}
+@media (min-width: 1650px) {
+  .over-scroll p::before{
+    width: 2rem;
+  }
+  p,a,button{
+  font-size: clamp(1rem, 0.886rem + 0.57vw, 1.35rem) !important;
+  }
+  button,.nav__cta{
+    min-height: 70px;
+  }
+  .list span{
+    transform: scale(1.7);
+  }
+  .hero {
+    // padding: 0 15%;
+    padding-inline: clamp(5%, 5vw, 10%);
+    justify-content: center;
+
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+    .hero-cta .primary-btn {
+      padding: 1.5em;
+    }
+  }
+  .paragraph {
+    font-size: clamp(4rem, 10vw, 8.25rem);
+  }
+  .redText {
+    h3 {
+      font-size: clamp(2.5rem, 10vw, 6rem);
+    }
+  }
+  .product {
+    min-height: 70vh;
+    padding-inline: clamp(5%, 5vw, 10%);
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+  }
+  .blog {
+    min-height: 70vh;
+    padding-inline: clamp(5%, 5vw, 10%);
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+    h6 {
+      font-size: 1.4rem;
+    }
+    h4 {
+      font-size: 1.6rem;
+    }
+  }
+  .footer{
+    padding-inline: clamp(10%, 5vw, 18%);
+    .logoInfo {
+      width: 40%;
+  }
+  h4 {
+    font-size: 1.6rem;
+  }
+  h6 {
+    font-size: 1.4rem;
+  }
+  }
+}
+
+@media (min-width: 2000px) {
+  .list span{
+    top: -300px;
+    transform: scale(2.1);
+  }
+  .list .listItem img {
+    width: 400px;
+  }
+  .list .listItem .imgWrap .button{
+    top: 35%
+  }
+  .list .listItem h5 {
+    font-size: 1.8em;
+}
+  .hero {
+    // padding: 0 15%;
+    padding-inline: clamp(12%, 5vw, 18%);
+    justify-content: center;
+
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem);
+    }
+    .hero-cta .primary-btn {
+      padding: 1.75em;
+    }
+  }
+  .paragraph {
+    font-size: clamp(4rem, 10vw, 9.25rem);
+  }
+
+  .product {
+    padding-inline: clamp(10%, 5vw, 18%);
+    h1 {
+      font-size: clamp(5.44rem, 10vw, 8.25rem);
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 6.6rem);
+    }
+  }
+  .blog {
+    padding-inline: clamp(10%, 5vw, 18%);
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem);
+    }
+    h6 {
+      font-size: 1.7rem;
+    }
+    h4 {
+      font-size: 2rem;
+    }
   }
 }
