--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -119,7 +119,7 @@ aside p {
   width: 100%;
   height: 100%;
   border: 2px solid var(--accent);
-  border-radius: 17px;
+  border-radius: inherit;
   background-color: transparent;
   opacity: 0;
   transition: opacity 0.5s;
