--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -300,7 +300,7 @@ aside p {
   position: relative;
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: stretch;
   gap: 30px;
   // min-height: 300px;
   // overflow-x: scroll;
@@ -325,6 +325,7 @@ aside p {
   // }
 
   .listItem2 {
+    height: auto;
     width: 250px;
     text-align: center;
     text-transform: uppercase;
@@ -336,7 +337,7 @@ aside p {
     background: radial-gradient(#a5185366, transparent);
 
     img {
-      width: 300px;
+      width: 250px;
     }
     h5 {
       background: transparent !important;
@@ -353,7 +354,7 @@ aside p {
     text-transform: uppercase;
     h5 {
       font-size: 1.3em;
-  }
+    }
     &:hover .imgWrap {
       outline: 2px solid var(--accent);
       box-shadow: 0px 0px 10px #a61853;
@@ -582,8 +583,9 @@ th {
     gap: 20px;
     margin-block: 5em;
     overflow-x: visible;
-    .listItem img,.listItem2 img{
-width: 200px;
+    .listItem img,
+    .listItem2 img {
+      width: 200px;
     }
     h5 {
       background: white;
@@ -655,5 +657,249 @@ width: 200px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     user-select: none;
+  }
+}
+
+// Bigger screennnn
+@media (min-width: 1650px) {
+  .over-scroll {
+    top: 70vh;
+  }
+  .over-scroll p::before {
+    width: 2rem;
+  }
+  p,
+  a,
+  button {
+    font-size: clamp(1rem, 0.886rem + 0.57vw, 1.35rem) !important;
+  }
+  button,
+  .nav__cta {
+    min-height: 70px;
+  }
+  .list span,
+  .pModel .pModelContent .list span {
+    transform: scale(1.7);
+  }
+  .hero {
+    // padding: 0 15%;
+    padding-inline: clamp(5%, 5vw, 10%);
+    justify-content: center;
+
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+    .hero-cta .primary-btn {
+      padding: 1.5em;
+    }
+  }
+  .paragraph {
+    font-size: clamp(4rem, 10vw, 8.25rem);
+  }
+  .redText {
+    h3 {
+      font-size: clamp(2.5rem, 10vw, 6rem);
+    }
+  }
+  .product {
+    min-height: 70vh;
+    gap: 10vh;
+    padding-inline: clamp(5%, 5vw, 10%);
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+  }
+  .blog {
+    min-height: 70vh;
+    gap: 10vh;
+    padding-inline: clamp(5%, 5vw, 10%);
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem);
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem);
+    }
+    h6 {
+      font-size: 1.4rem;
+    }
+    h4 {
+      font-size: 1.6rem;
+    }
+  }
+  .footer {
+    padding-inline: clamp(10%, 5vw, 18%);
+    .logoInfo {
+      width: 40%;
+    }
+    h4 {
+      font-size: 1.6rem;
+    }
+    h6 {
+      font-size: 1.4rem;
+    }
+    .toTop {
+      top: 40%;
+      right: 10%;
+      .arrow {
+        width: 70px;
+    }
+    }
+  }
+  .pTable{
+    table * {
+      font-size: 14px;
+  }
+  }
+
+  .pModel,
+  .prodHero,
+  .pCont,
+  .pTable {
+    padding-inline: clamp(5%, 5vw, 10%) !important;
+
+    h1 {
+      font-size: clamp(4.44rem, 10vw, 7rem) !important;
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem) !important;
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 4.6rem) !important;
+    }
+    h5 {
+      font-size: 1.1rem !important;
+    }
+    h6 {
+      font-size: 1rem !important;
+    }
+    h4 {
+      font-size: 1.6rem !important;
+    }
+  }
+  .pModel {
+    .listItem2 {
+      width: 350px;
+    }
+    img {
+      width: 300px;
+    }
+  }
+  .prodHero {
+    justify-content: space-around !important;
+    .pInfo {
+      padding-inline: 20%;
+      align-items: start;
+    }
+  }
+  .prodHero .pFeature h3 {
+    font-size: clamp(3.5rem, 10vw, 4.3rem) !important;
+    bottom: -35%;
+  }
+  .nav__cta .arrow {
+    width: 30px;
+}
+
+}
+
+@media (min-width: 2000px) {
+  .list span {
+    top: -300px;
+    transform: scale(2.1);
+  }
+  .list .listItem img {
+    width: 400px;
+  }
+  .list .listItem .imgWrap .button {
+    top: 35%;
+  }
+  .list .listItem h5 {
+    font-size: 1.8em;
+  }
+  .pModel .pModelContent {
+    .list span {
+      top: -300px;
+      transform: scale(2.1);
+    }
+    .list .listItem .imgWrap img {
+      width: 400px;
+    }
+    .list .listItem .imgWrap .button {
+      top: 35%;
+    }
+    .list .listItem h5 {
+      font-size: 1.8em;
+    }
+    &.light .list .listItem .imgWrap img,
+    &.light .list .listItem .imgWrap2 img {
+      width: 500px !important;
+    }
+  }
+  .hero {
+    // padding: 0 15%;
+    padding-inline: clamp(12%, 5vw, 18%);
+    justify-content: center;
+
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem);
+    }
+    .hero-cta .primary-btn {
+      padding: 1.75em;
+    }
+  }
+  .paragraph {
+    font-size: clamp(4rem, 10vw, 9.25rem);
+  }
+
+  .product {
+    padding-inline: clamp(10%, 5vw, 18%);
+    h1 {
+      font-size: clamp(5.44rem, 10vw, 8.25rem);
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 6.6rem);
+    }
+  }
+  .blog {
+    padding-inline: clamp(10%, 5vw, 18%);
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem);
+    }
+    h6 {
+      font-size: 1.7rem;
+    }
+    h4 {
+      font-size: 2rem;
+    }
+  }
+  .pModel,
+  .prodHero,
+  .pCont,
+  .pTable {
+    padding-inline: clamp(10%, 5vw, 18%) !important;
+    h1 {
+      font-size: clamp(5.44rem, 10vw, 8.25rem) !important;
+    }
+    h2 {
+      font-size: clamp(3.5rem, 10vw, 6.6rem) !important;
+    }
+    h3 {
+      font-size: clamp(3.5rem, 10vw, 5.6rem) !important;
+    }
+    h6 {
+      font-size: 1rem !important;
+    }
+    h4 {
+      font-size: 2rem !important;
+    }
+  }
+  .prodHero .pFeature h3 {
+    font-size: clamp(3.5rem, 10vw, 4.5rem) !important;
+    bottom: -25%;
   }
 }
