--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -102,7 +102,7 @@
 .nav__list {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   row-gap: 2.5rem;
 }
 
