--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -118,7 +118,7 @@
 .nav__list {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     row-gap: 2.5rem;
 }
 
