--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -30,9 +30,10 @@
 
 .pFeature {
   height: -webkit-fill-available;
+  position: relative;
   display: flex;
   font-size: 13px;
-  align-content: flex-end;
+  align-content: flex-start;
   text-transform: uppercase;
   flex-direction: column;
   flex-wrap: wrap;
@@ -45,7 +46,13 @@
   }
 
   h3 {
+    position: absolute;
+    bottom: -10%;
+    left: 0%;
+    width: 15ch;
+    z-index: 2;
     margin-top: 0.5em;
+    transform: translateX(-10vw) !important;
   }
 
   ul {
@@ -95,7 +102,7 @@
     transition: all 0.5s ease;
 
     img{
-        width: 300px;
+        width: 400px;
     }
 }
   }
@@ -127,8 +134,8 @@
 }
   .list span {
     z-index: 0;
-    top: -380px;
-    transform: scale(1.4);
+    top: -350px;
+    transform: scale(1.5);
 
     svg *{
         fill: white;
@@ -147,7 +154,7 @@
     transition: all 0.5s ease;
 
     img{
-        width: 250px;
+        width: 300px;
     }
 }
   .list .listItem .imgWrap2 {
@@ -158,7 +165,7 @@
     transition: all 0.5s ease;
 
     img{
-        width: 300px;
+        width: 400px;
     }
 }
 
