--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -44,10 +44,8 @@
   font-size: 12px;
 }
 .pFeature h3 {
-  position: absolute;
-  bottom: -10%;
-  left: 0%;
-  width: 15ch;
+  width: calc(100% + 10vw);
+  line-break: anywhere;
   z-index: 2;
   margin-top: 0.5em;
   transform: translateX(-10vw) !important;
@@ -383,6 +381,14 @@
     width: -moz-fit-content;
     width: fit-content;
   }
+  .pFeature h3 {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    line-break: normal;
+    transform: none !important;
+  }
   .pFeature ul {
     padding-left: 30px;
   }
@@ -393,6 +399,7 @@
   .pModel .list:has(.imgWrap2) {
     gap: 50px;
     margin-top: unset;
+    align-items: center;
   }
   .pModel .list {
     flex-direction: column;
